feat(devloop): run on WildFly and TomEE
Both run goals fork a server JVM, so the agents cannot ride in on
MAVEN_OPTS the way they do for embedded Jetty. ServerPlugin records
where a server takes its JVM flags, and MavenGoalRuntime routes the
agents and the application's own -D settings into that parameter.

What the forked shape forced:

- WildFly groups module options before it builds the server command
  line, so a two-token `--add-opens X` arrives as every flag ahead of
  every value and the JVM refuses to start; they are folded into
  `--add-opens=X`.
- TomEE reads its `args` the way a shell would and drops a backslash as
  an escape, so a Windows path survives only when doubled. WildFly
  splits on whitespace and must not be escaped, so the escaping is per
  plugin.
- WildFly's goal already forks `package` and TomEE's forks nothing, so
  only TomEE is given a phase.
- Provisioning a server on a first start outruns the five minutes a
  boot is given, so the startup window is now a runtime's to declare.

The agent no longer publishes the Instrumentation handle into the
system properties table: a non-String value in a table the rest of the
JVM reads as strings is a trap. WildFly's transactions subsystem merges
those properties when it loads jbossts-properties.xml, took the handle
for a string, and failed its boot with a NullPointerException after the
HTTP listener had already bound. The handle travels by
DevLoopAgent.get() through the system class loader instead, and
DevLoopRedefiner falls back to the old property so that a newer dev
server still works with an older agent jar.